--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
-        <liquibase-core.version>4.9.1</liquibase-core.version>
+        <liquibase-core.version>4.10.0</liquibase-core.version>
+        <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
+        <jakarta.servlet.jsp-api.version>3.0.0</jakarta.servlet.jsp-api.version>
+        <jakarta.servlet.jsp.jstl.version>2.0.0</jakarta.servlet.jsp.jstl.version>
+        <bcrypt.version>0.9.0</bcrypt.version>
+        <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
         <log4j-api.version>2.17.2</log4j-api.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
-        <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
-        <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
     </properties>
 
     <dependencies>
@@ -30,13 +33,18 @@
         <dependency>
             <groupId>jakarta.servlet.jsp</groupId>
             <artifactId>jakarta.servlet.jsp-api</artifactId>
-            <version>3.0.0</version>
+            <version>${jakarta.servlet.jsp-api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>2.0.0</version>
+            <version>${jakarta.servlet.jsp.jstl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>${bcrypt.version}</version>
         </dependency>
 
         <dependency>
