Added custom sequence to MySql. Modified docker-compose.yml. Added dbinitializer.sql for sequence implementation. Added dml and ddl files: services, order-statuses, visit-times, order-visit-times, sequence.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,7 @@ services:
       MYSQL_ROOT_PASSWORD: 1111
       MYSQL_USER: admin
       MYSQL_PASSWORD: adminPass
+    volumes:
+      - "./src/main/resources/dbinitializer.sql:/docker-entrypoint-initdb.d/1.sql"
     ports:
       - '3306:3306'
