--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
         <log4j-api.version>2.17.2</log4j-api.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
+        <gson.version>2.9.0</gson.version>
     </properties>
 
     <dependencies>
@@ -28,13 +29,11 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>${jakarta.servlet-api.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet.jsp</groupId>
             <artifactId>jakarta.servlet.jsp-api</artifactId>
             <version>${jakarta.servlet.jsp-api.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.web</groupId>
@@ -45,6 +44,11 @@
             <groupId>at.favre.lib</groupId>
             <artifactId>bcrypt</artifactId>
             <version>${bcrypt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
         <dependency>
