--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-rootLogger.level=info
+rootLogger.level=debug
 rootLogger.appenderRef.stdout.ref=STDOUT
 appender.console.type=Console
 appender.console.name=STDOUT
