--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,12 @@
         <jakarta.servlet.jsp.jstl.version>2.0.0</jakarta.servlet.jsp.jstl.version>
         <bcrypt.version>0.9.0</bcrypt.version>
         <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
+        <maven-javadoc-plugin.version>3.3.2</maven-javadoc-plugin.version>
         <log4j-api.version>2.17.2</log4j-api.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
         <gson.version>2.9.0</gson.version>
         <mockito-junit-jupiter.version>4.6.1</mockito-junit-jupiter.version>
+        <maven-site-plugin.version>3.12.0</maven-site-plugin.version>
     </properties>
 
     <dependencies>
@@ -110,9 +112,22 @@
             <version>3.17.2</version>
         </dependency>
     </dependencies>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${maven-site-plugin.version}</version>
+            </plugin>
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
@@ -136,6 +151,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
                 <configuration>
+                    <warName>beautysalon</warName>
                     <webResources>
                         <resource>
                             <directory>
